# cantrip

./: Cargo.toml  LICENSE
assets/sprites/: player.xcf
src/: actors.rs  main.rs
src/actors/: background.rs  character.rs  mote.rs  player.rs
